# lab01-inheritance-angelySA

./: CMakeLists.txt
src/: Base.cpp  Base.h  CMakeLists.txt  Derived1.cpp  Derived1.h  Derived2.cpp  Derived2.h  Lab01Inheritance.cpp
